--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,8 @@ permalink: /:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
-
+markdown: kramdown
+theme: minima
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
