--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,9 @@ name: Fedor Kitashov
 description: Radio Engineering Student at Moscow Institute of Physics and Technology.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/avatar.jpeg
 
+#avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/avatar.png
+avatar: https://avatars2.githubusercontent.com/u/22987333?s=400&u=8e64ae5917bae40e29964b869435b627e79d81d1&v=4
 #
 # Flags below are optional
 #
