--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: channel/UCmmKg8-QgEUSTGIgYry-k1A
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
@@ -38,11 +38,11 @@ footer-links:
 disqus: https-owoshch-github-io
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-115898162-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: 
+url: http://owoshch.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -59,7 +59,6 @@ permalink: /:title/
 # The release of Jekyll Now that you're using
 version: v1.2.0
 markdown: kramdown
-theme: minima
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
