--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Fedor Kitashov
 
 # Short bio or description (displayed in the header)
-description: Applied Mathematics and Physics Student at Moscow Institute of Physics and Technology.
+description: Computer vision research engineer at Mail.Ru Group
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 
